logs/dag_id=currency_parsing_rub/run_id=scheduled__2024-04-19T000000+0000/task_id=create_schema/attempt=3.log
[2024-04-20T12:13:22.596+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: currency_parsing_rub.create_schema scheduled__2024-04-19T00:00:00+00:00 [queued]>
[2024-04-20T12:13:22.618+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: currency_parsing_rub.create_schema scheduled__2024-04-19T00:00:00+00:00 [queued]>
[2024-04-20T12:13:22.619+0000] {taskinstance.py:2193} INFO - Starting attempt 3 of 4
[2024-04-20T12:13:22.660+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_schema> on 2024-04-19 00:00:00+00:00
[2024-04-20T12:13:22.667+0000] {standard_task_runner.py:60} INFO - Started process 176 to run task
[2024-04-20T12:13:22.677+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'currency_parsing_rub', 'create_schema', 'scheduled__2024-04-19T00:00:00+00:00', '--job-id', '798', '--raw', '--subdir', 'DAGS_FOLDER/stage/currency_rub.py', '--cfg-path', '/tmp/tmpyvxdcwo9']
[2024-04-20T12:13:22.680+0000] {standard_task_runner.py:88} INFO - Job 798: Subtask create_schema
[2024-04-20T12:13:22.835+0000] {task_command.py:423} INFO - Running <TaskInstance: currency_parsing_rub.create_schema scheduled__2024-04-19T00:00:00+00:00 [running]> on host b6a424c1134c
[2024-04-20T12:13:23.156+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='currency_parsing_rub' AIRFLOW_CTX_TASK_ID='create_schema' AIRFLOW_CTX_EXECUTION_DATE='2024-04-19T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-19T00:00:00+00:00'
[2024-04-20T12:13:23.160+0000] {sql.py:276} INFO - Executing: dags/scripts/create_schemas.sql
[2024-04-20T12:13:23.185+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-20T12:13:23.227+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-20T12:13:23.282+0000] {sql.py:457} INFO - Running statement: dags/scripts/create_schemas.sql , parameters: None
[2024-04-20T12:13:23.300+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "dags"
LINE 1: dags/scripts/create_schemas.sql
        ^

[2024-04-20T12:13:23.378+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=currency_parsing_rub, task_id=create_schema, execution_date=20240419T000000, start_date=20240420T121322, end_date=20240420T121323
[2024-04-20T12:13:23.417+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 798 for task create_schema (syntax error at or near "dags"
LINE 1: dags/scripts/create_schemas.sql
        ^
; 176)
[2024-04-20T12:13:23.462+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-20T12:13:23.487+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-20T12:13:23.540+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
